maze.lessons.maze.island.IslandMaze.scala.error
Escaper:12: error: ';' expected but 'if' found.
				case true =>  gauche() if(!estFaceMur){
                                                       ^