maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
	while(true){nord()}
	
}
def nord(){
	while(getY() != 0){
		if(getDirection == Direction.NORTH){
			estFaceMur() match{
				
				case false => avance()
				case true =>  gauche() if(!estFaceMur){
										avance()
									}
				case _ =>
			}
		
		
		}else{
			gauche()
		}
	}
}

